--- a/public/css/sass/drim-share.scss
+++ b/public/css/sass/drim-share.scss
@@ -3,7 +3,14 @@
  *
  */
 
-/***********************************
-## MAIN STYLES
-***********************************/
-@import "main";
+ @import "mixins";
+
+ /***********************************
+ ## MAIN STYLES
+ ***********************************/
+ @import "main";
+ 
+ /***********************************
+ ## LAYOUT
+ ***********************************/
+ @import "layout";
