--- a/admin/css/drim-share-admin.css
+++ b/admin/css/drim-share-admin.css
@@ -3,16 +3,52 @@
  * included in this file.
  */
 
-li.ui-state-default.ui-sortable-handle {
-  padding: 4px 8px;
-  border: 1px solid #c5c5c5;
-  background-color: #f0f8ff;
-  font-weight: 700;
+/*** Fontello Icons ***/
+@font-face {
+  font-family: "fontello";
+  src: url("./font/fontello.eot?") format("eot"), url("./font/fontello.woff2") format("woff2"), url("./font/fontello.woff") format("woff"), url("./font/fontello.ttf") format("truetype"), url("./font/fontello.svg#fontello") format("svg"); }
+
+.demo-icon
+{
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 20px;
+  margin-right: .2em;
+  text-align: center;
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  font-size: 0.8em;
+
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
-.ui-state-highlight {
-  border: 1px solid #dad55e;
-	background: #fffa90;
-	color: #777620;
-  height: 1em;
-  padding: 4px 8px;
-}
+
+.icon-linkedin-1:before { content: '\e800'; }
+.icon-wordpress-1:before { content: '\e801'; }
+.icon-facebook-1:before { content: '\e802'; }
+.icon-github:before { content: '\e803'; }
+.icon-pinterest:before { content: '\e804'; }
+.icon-twitter-1:before { content: '\e805'; }
+.icon-gplus:before { content: '\e806'; }
+
+.icon-linkedin-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
+.icon-wordpress-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
+.icon-facebook-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
+.icon-github { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe803;&nbsp;'); }
+.icon-pinterest { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe804;&nbsp;'); }
+.icon-twitter-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe805;&nbsp;'); }
+.icon-gplus { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe806;&nbsp;'); }
