--- a/public/css/sass/_main.scss
+++ b/public/css/sass/_main.scss
@@ -1,139 +1,46 @@
-.ds_wrapper {
-  margin-bottom: 20px;
+@include font-face(fontello, "./font/fontello");
 
-  &::before,
-  &::after {
-    content: '';
-    display: table;
-    clear: both;
-  }
+.demo-icon
+{
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
 
-  .ds_heading {
-    float: left;
-    margin-right: 6px;
-  }
+  display: inline-block;
+  text-decoration: inherit;
+  width: 20px;
+  margin-right: .2em;
+  text-align: center;
 
-  .ds_bttn {
-    float: left;
-    margin: 0 2px;
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
 
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
 
-    &:first-child {
-      margin-left: 0;
-    }
+  font-size: 0.8em;
 
-    &:last-child {
-      margin-right: 0;
-    }
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
-
-    a {
-      text-decoration: none;
-      box-shadow: none;
-      text-transform: capitalize;
-    }
-  }
-
-  &.ds_image {
-
-    .ds_bttn {
-      background-size: cover;
-      background-repeat: no-repeat;
-      height: 26px;
-      width: 70px;
-      transition: all 1s;
-
-      @each $network in facebook twitter linkedin googleplus pinterest {
-        &.ds_#{$network} {
-          background-image: url('/wp-grid/wp-content/plugins/drim-share/admin/assets/ds_#{$network}.png');
-        }
-      }
-
-
-      &:hover {
-        opacity: 0.8;
-      }
-
-      a {
-        display: block;
-        height: 100%;
-
-        span {
-
-          &.ds_network_name {
-            display: none;
-          }
-        }
-      }
-    }
-  }
-
-  &.ds_icon {
-
-    .ds_heading {
-      line-height: 24px;
-    }
-
-    .ds_bttn {
-      width: 32px;
-      transition: all 1s;
-
-      &:hover {
-        opacity: 0.8;
-      }
-
-      a {
-
-        img {
-          width: 24px;
-        }
-
-        span {
-
-          &.ds_network_name {
-            display: none;
-          }
-        }
-      }
-    }
-  }
-
-  &.ds_text {
-
-    .ds_bttn {
-
-      a {
-        padding: 4px 8px;
-        color: #fff;
-        font-size: 0.9em;
-        transition: all 1s;
-
-        &:hover {
-          color: #000;
-          opacity: 0.8;
-        }
-
-      }
-
-      &.ds_facebook a {
-        background-color: #4367b1;
-      }
-
-      &.ds_twitter a {
-        background-color: #1fa0f3;
-      }
-
-      &.ds_linkedin a {
-        background-color: #0277b5;
-      }
-
-      &.ds_googleplus a {
-        background-color: #da4638;
-      }
-
-      &.ds_pinterest a {
-        background-color: #bd081c;
-      }
-    }
-  }
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
+
+.icon-linkedin-1:before { content: '\e800'; }
+.icon-wordpress-1:before { content: '\e801'; }
+.icon-facebook-1:before { content: '\e802'; }
+.icon-github:before { content: '\e803'; }
+.icon-pinterest:before { content: '\e804'; }
+.icon-twitter-1:before { content: '\e805'; }
+.icon-gplus:before { content: '\e806'; }
+
+.icon-linkedin-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
+.icon-wordpress-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
+.icon-facebook-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
+.icon-github { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe803;&nbsp;'); }
+.icon-pinterest { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe804;&nbsp;'); }
+.icon-twitter-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe805;&nbsp;'); }
+.icon-gplus { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe806;&nbsp;'); }
