--- a/public/css/sass/_main.scss
+++ b/public/css/sass/_main.scss
@@ -1,6 +1,6 @@
 @include font-face(fontello, "./font/fontello");
 
-.demo-icon
+.ds_icon.demo-icon
 {
   font-family: "fontello";
   font-style: normal;
@@ -29,18 +29,18 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-linkedin-1:before { content: '\e800'; }
-.icon-wordpress-1:before { content: '\e801'; }
-.icon-facebook-1:before { content: '\e802'; }
-.icon-github:before { content: '\e803'; }
-.icon-pinterest:before { content: '\e804'; }
-.icon-twitter-1:before { content: '\e805'; }
-.icon-gplus:before { content: '\e806'; }
+.ds_icon.icon-linkedin-1:before { content: '\e800'; }
+.ds_icon.icon-wordpress-1:before { content: '\e801'; }
+.ds_icon.icon-facebook-1:before { content: '\e802'; }
+.ds_icon.icon-github:before { content: '\e803'; }
+.ds_icon.icon-pinterest:before { content: '\e804'; }
+.ds_icon.icon-twitter-1:before { content: '\e805'; }
+.ds_icon.icon-gplus:before { content: '\e806'; }
 
-.icon-linkedin-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
-.icon-wordpress-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
-.icon-facebook-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
-.icon-github { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe803;&nbsp;'); }
-.icon-pinterest { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe804;&nbsp;'); }
-.icon-twitter-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe805;&nbsp;'); }
-.icon-gplus { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe806;&nbsp;'); }
+.ds_icon.icon-linkedin-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
+.ds_icon.icon-wordpress-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
+.ds_icon.icon-facebook-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
+.ds_icon.icon-github { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe803;&nbsp;'); }
+.ds_icon.icon-pinterest { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe804;&nbsp;'); }
+.ds_icon.icon-twitter-1 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe805;&nbsp;'); }
+.ds_icon.icon-gplus { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe806;&nbsp;'); }
