--- a/public/css/sass/drim-share.scss
+++ b/public/css/sass/drim-share.scss
@@ -4,12 +4,13 @@
  */
 
  @import "mixins";
+ @import "variables";
 
  /***********************************
  ## MAIN STYLES
  ***********************************/
  @import "main";
- 
+
  /***********************************
  ## LAYOUT
  ***********************************/
