--- a/admin/css/drim-share-admin.css
+++ b/admin/css/drim-share-admin.css
@@ -8,10 +8,16 @@
  .ds_grid {
    display: grid;
    grid-gap: 20px;
-   grid-template-columns: auto 320px;
+   grid-template-columns: 900px 320px auto;
  }
 
- @media screen and (max-width: 960px) {
+ @media screen and (max-width: 1220px) {
+   .ds_grid {
+     grid-template-columns: 600px 320px auto;
+   }
+ }
+
+ @media screen and (max-width: 1080px) {
    .ds_grid {
      grid-template-columns: 1fr;
    }
@@ -24,6 +30,16 @@
  .no_decoration,
  .no_decoration:hover {
    text-decoration: none;
+ }
+
+
+ .ds_wrapper {
+   font-size: 16px;
+ }
+
+ .separator {
+   margin-top: 40px;
+   margin-bottom: 20px;
  }
 
 /*** Fontello Icons ***/
