--- a/public/css/sass/drim-share.scss
+++ b/public/css/sass/drim-share.scss
@@ -7,11 +7,17 @@
  @import "variables";
 
  /***********************************
- ## MAIN STYLES
- ***********************************/
- @import "main";
-
- /***********************************
  ## LAYOUT
  ***********************************/
  @import "layout";
+
+ /***********************************
+ ## BUTTONS
+ ***********************************/
+ @import "buttons/buttons";
+
+
+ /***********************************
+ ## ICONS / FONTS
+ ***********************************/
+ @import "main";
